- https://github.com/eclipse-sirius/sirius-web/issues/2044[#2044] [view] Add custom icons to edges and nodes label in view dsl.
- https://github.com/eclipse-sirius/sirius-web/issues/2396[#2396] [vs-code] Add VS Code Integration for React Flow diagrams.

=== Improvements

- [releng] Add some automatic checks to simplify code reviews
- [releng] Make some cypress tests more robust
- https://github.com/eclipse-sirius/sirius-web/issues/2296[#2296] [diagram] Add "export to SVG" action in the diagram panel of the react-flow prototype
- https://github.com/eclipse-sirius/sirius-web/issues/2298[#2298] [diagram] Support keyboard shortcut for "Delete from model" action on react-flow diagrams
- https://github.com/eclipse-sirius/sirius-web/issues/2231[#2231] [diagram] Extract the support for full screen in a dedicated hook
- https://github.com/eclipse-sirius/sirius-web/issues/2295[#2295] [diagram] Support direct edit on edges labels (center, start, end) on react-flow diagrams
- https://github.com/eclipse-sirius/sirius-web/issues/2233[#2233] [diagram] Move the behavior of the arrange all in the diagram panel component
- https://github.com/eclipse-sirius/sirius-web/issues/2311[#2311] [diagram] Ensure that the layout uses the same context as the rendering
- https://github.com/eclipse-sirius/sirius-web/issues/2208[#2208] [diagram] Add Cypress tests for React Flow.
- https://github.com/eclipse-sirius/sirius-web/issues/2198[#2198] [sirius-web] Add a default Color Palette on View creation
- https://github.com/eclipse-sirius/sirius-web/issues/2228[#2228] [sirius-web] Creating a domain from the onboard area action now initialize its name.
- https://github.com/eclipse-sirius/sirius-web/issues/2329[#2329] [form] Change the default representation in the details view for non containment reference from a select widget to a reference widget.
- https://github.com/eclipse-sirius/sirius-web/issues/2314[#2314] [diagram] Add feedback on edge selection on react-flow diagrams