@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 Obeo.
+ * Copyright (c) 2023, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -19,9 +19,12 @@ export interface UseConnectorValue {
   onConnectEnd: OnConnectEnd;
   onConnectorContextualMenuClose: () => void;
   onConnectionStartElementClick: (event: React.MouseEvent<HTMLDivElement, MouseEvent>) => void;
+  addTempConnectionLine: () => void;
+  removeTempConnectionLine: () => void;
   newConnectionStyleProvider: NodeStyleProvider;
   connection: Connection | null;
   position: XYPosition | null;
+  isConnectionInProgress: boolean;
 }
 
 export interface NodeStyleProvider {
